--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
    <div class="logo">
    <h1>My Time</h1>
    </div>
-   <div class="navigation">
-   <h1><a href=""> World </a></h1>
-   <h1><a href=""> U.S. </a></h1>
-   <h1><a href=""> Tech </a></h1>
-   <h1><a href=""> Science </a></h1>
-   </div>
+    <ul>
+	  <div class="navigation">
+     <li><a href=""> World </a></h1>
+	  </div>
+	  <div class="navigation">
+     <li><a href=""> U.S. </a></h1>
+	  </div>
+	  <div class="navigation">
+     <li><a href=""> Tech </a></h1>
+	  </div>
+	  <div class="navigation">
+     <li><a href=""> Science </a></h1>
+	  </div>
+	</ul>
    </div>
   </body>
 </html>
