--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 	  <div class="navigation">
      <li><a href=""> Science </a></h1>
 	  </div>
+	  </div>
 	</ul>
-   </div>
+    <div class="img rust">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png">
+	</div>
+	<div class="rust">
+	<h2>FBI Finds Action Star Guilty<br /> of False Advertising</h2>
+	</div>
+	<p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+   <h2><em>Orca Spends Vacation <br />at Land World Puget</em></h2>
+   <h2><em>Burger for Breakfast:<br /> How Early is too Early?</em></h2>
   </body>
 </html>
